--- a/红米 ax6000 刷机教程.html
+++ b/红米 ax6000 刷机教程.html
@@ -1352,6 +1352,8 @@ reboot</code></pre>
 <p>接下来访问 <a href="http://192.168.3.1">http://192.168.3.1</a></p>
 <p>上网设置如下，其中 192.168.31.3 是在爱快中设置的 IP</p>
 <p><img alt="" src="https://raw.githubusercontent.com/gcxfd/img/gh-pages/fjVdxf.png"></p>
+<p>可能需要重新装一下面板，以刷新后台 ip, 重新装面板如下图</p>
+<p><img alt="" src="https://raw.githubusercontent.com/gcxfd/img/gh-pages/Lgpro4.png"></p>
 <h2 class="atx" id="参考教程">参考教程</h2>
 <ol>
 <li><a href="https://www.youtube.com/watch?v=AkBrLBjpc_k">刷机视频步骤</a></li>
